--- a/railway.toml
+++ b/railway.toml
@@ -1,7 +1,15 @@
 [build]
-builder = "NIXPACKS"
+builder = "nixpacks"
 
 [deploy]
 startCommand = "python server.py"
-restartPolicyType = "ON_FAILURE"
-restartPolicyMaxRetries = 10
+restartPolicyType = "on_failure"
+restartPolicyMaxRetries = 3
+
+[[deploy.environmentVariables]]
+name = "STORAGE_PATH"
+value = "/data"
+
+[[volumes]]
+name = "adw_storage"
+mountPath = "/data"
